current solution was breaking on firefox when min width was a hard number fixed by making it relative

--- a/src/components/AudioPreview/style.module.scss
+++ b/src/components/AudioPreview/style.module.scss
@@ -39,9 +39,8 @@
 }
 
 .playerContainer {
-  width: 45rem;
-  max-width: 90%;
-  min-width: 45%;
+  max-width: 45rem;
+  min-width: 70%;
   display: flex;
   justify-content: space-between;
   align-items: center;
